--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,12 +51,11 @@ android {
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.2.0")
         testImplementation("org.mockito.kotlin:mockito-kotlin:5.1.0")
-        implementation("org.apache.pdfbox:pdfbox:2.0.29")
+        implementation("com.tom-roush:pdfbox-android:2.0.27.0")
     }
 
     testOptions {
         unitTests.all {
-
             testLogging {
                events "passed", "skipped", "failed", "standardOut", "standardError"
                outputs.upToDateWhen {false}
