--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - integration_test/assets/test_highlighted.pdf
+    - integration_test/assets/clear_sample.pdf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
