--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,6 +2,7 @@ name: flutter_pdf_kit_plugin_example
 description: "Demonstrates how to use the flutter_pdf_kit_plugin plugin."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
+version: 1.0.1+1
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
