--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_pdfview: ^1.3.2
+  file_picker: ^10.1.9
   flutter_pdf_kit_plugin:
     # When depending on this package from a real application you should use:
     #   flutter_pdf_kit_plugin: ^x.y.z
